[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Textures/DirtTexture.tres" type="Texture" id=1]
[ext_resource path="res://src/Tiles/Tile.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="Tile" type="Area2D" groups=["Tiles"]]
script = ExtResource( 2 )

[node name="Ground" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Highlight" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0.12549, 1, 0, 1 )
texture = ExtResource( 1 )

[node name="GrowHighlight" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="input_event" from="." to="." method="_on_Tile_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Tile_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Tile_mouse_exited"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
